web/themes/custom/union_marketing/scss/components/_forms.scss
.cu-fieldset {
  padding: 0;

  .cu-legend {
    margin: var(--cu-vr0) 0;
  }
}

// Visually hide datelist elements but allow screen readers.
.cu-input-list__item--datelist .container-inline .cu-label {
  @include visually-hidden;
}

.cu-input-list__item--webform_document_file {
  padding: var(--cu-vr0);
  margin-bottom: var(--cu-vr1);
  border: 1px solid #ccc;
  border-radius: 3px;
}

.webform-submission-event-registration-form[action*="variant=worker_institute_opt_in"] {
  .cu-input-list__item--checkbox {
    margin-bottom: var(--cu-vr0);
  }

  @include breakpoint(sm) {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 0 var(--cu-ps0);
    align-items: start;

    .form-item-accessible-accommodation.cu-input-list__item.has-float-label {
      display: flex;
      flex-direction: column;
      grid-row: span 3;

      .cu-input-message {
        margin-bottom: var(--cu-vr-1);
      }

      .cu-input {
        order: 2;
      }
    }

    .webform-actions {
      align-self: end;
    }
  }
}

.webform-submission-event-registration-form {
  .form-item-opt-in {
    margin-left: 0;
  }

  .webform-actions {
    margin-top: 1em;
  }
}

